--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "customs",
-  "version": "0.1.1",
-  "description": "Type validator",
+  "version": "1.0.0",
+  "description": "Type validator for node.js and the browser through browserify",
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha",
