--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
-language: node_js
 node_js:
-  - "0.11"
-install:
-  - npm install
-script:
-  - npm run-script coverage
+- "0.10"
+- "0.11"
+language: node_js
+install: "npm install"
+script: "npm run-script coverage"
